dist_pkgdata_DATA = 0.la 1.la 2.la 3.la 4.la 5.la 6.la 7.la 8.la 9.la ..la am.la \
	von.la beep.la erklaerung.la fuer.la keine-weiteren-nachrichten.la \
	nachricht-geloescht.la nachricht.la nachrichten.la neue-nachricht.la \
	neue-nachrichten.la uhr.la um.la anrufbeantworter-von.la \
	bitte-nachricht.la fuer-neue-ansage-9.la zum-abhoeren-1.la \
	bitte-neue-ansage-komplett.la neue-ansage-lautet.la wenn-einverstanden-1.la \
	bitte-neue-ansage-kurz.la ansage-gespeichert.la und.la ein.la 10.la 11.la \
	12.la 13.la 14.la 15.la 16.la 17.la 18.la 19.la 20.la 30.la 40.la 50.la 60.la \
	70.la 80.la 90.la fernabfrage-aktiv.la unbekannt.la +.la eine.la README
	
uninstall-hook:
	-rmdir $(DESTDIR)$(pkgdatadir)
