noinst_LIBRARIES = libccmodules.a
libccmodules_a_SOURCES = audiosend.cpp audiosend.h callmodule.h callmodule.cpp\
 audioreceive.h audioreceive.cpp faxreceive.h faxreceive.cpp connectmodule.cpp\
 connectmodule.h switch2faxG3.cpp switch2faxG3.h readDTMF.cpp readDTMF.h \
 calloutgoing.cpp calloutgoing.h disconnectmodule.cpp disconnectmodule.h \
 faxsend.cpp faxsend.h

